tests/miz/pass/types/pass_type_elaboration_local_mode_reserved_variable_membership_001.miz
definition
  mode LocalModeMembershipDef: LocalModeMembership is set;
end;

reserve x for LocalModeMembership;
reserve y for set;
theorem LocalModeReservedVariableMembershipPayloadBoundary: x in y;
