tests/miz/fail/types/fail_type_elaboration_argument_bearing_attribute_gap_001.miz
definition
  let x be set;
  attr RankedDef: x is 2-ranked means thesis;
end;

reserve y for ranked(2) set;
